--- a/css/style.css
+++ b/css/style.css
@@ -158,3 +158,12 @@ footer {
   background-color: #007bff;
   color: #ffffff;
 }
+
+.nav-list a.active {
+  outline: none;
+  text-decoration: underline;
+  font-weight: bold;
+  background-color: #f0f0f0;
+  color: #333;
+  border-bottom: 2px solid white;
+}
