--- a/css/style.css
+++ b/css/style.css
@@ -178,7 +178,7 @@ footer {
   border-bottom: 2px solid white;
 }
 a {
-  color: #007BFF; /* Use a blue color for links */
-  text-decoration: underline; /* Underline links */
-  transition: color 0.3s ease; /* Smooth transition for hover effects */
+  color: #007BFF;
+  text-decoration: underline;
+  transition: color 0.3s ease;
 }
