--- a/css/style.css
+++ b/css/style.css
@@ -182,7 +182,7 @@ footer {
   border-bottom: 2px solid white;
 }
 a {
-  color: #007BFF;
+  color: #03458d;
   text-decoration: underline;
   transition: color 0.3s ease;
 }
